test/should_fail/InstanceVariableAlreadyClaimed2.oj

@implementation InstanceVariableAlreadyClaimed2

@property id foo;
@property id foo2;

@synthesize foo2=_foo;

@end
